--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <div class="card-wrapper" id="cardWrapper">
             <div class="card-face card-front" id="cardFront">
                 <h1 class="shimmer">Happy Birthday</h1>
-                <h2 class="shimmer">T Santhiya!</h2> <!-- Updated Name -->
+                <h2 class="shimmer">ᴍ.ᴍᴀɢᴇsʜ</h2> <!-- Updated Name -->
                 <!-- Updated Cake Image URL -->
                 <img src="https://assets.onecompiler.app/3zky9aw9p/43kjab4wq/%E2%80%94Pngtree%E2%80%94birthday%20cake%203d_16787458.png" alt="Birthday Cake" class="cake" id="cake">
                 <div class="balloons-container">
