--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             </div>
             <div class="card-face card-back" id="cardBack">
                 <p class="inside-message">
-                     T Santhiya,<br><br> <!-- Updated Name -->
+                     ᴍᴀɴɢᴇsʜ,<br><br> <!-- Updated Name -->
                     Entha pulliku Nalla Buthiya Kudu Kadavale  Mm Happy Birthday <br><br>
                     With Developer,<br>
                     [EVS]
