--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 <h1 class="shimmer">Happy Birthday</h1>
                 <h2 class="shimmer">ᴍ.ᴍᴀɢᴇsʜ</h2> <!-- Updated Name -->
                 <!-- Updated Cake Image URL -->
-                <img src="https://assets.onecompiler.app/3zky9aw9p/43kjab4wq/%E2%80%94Pngtree%E2%80%94birthday%20cake%203d_16787458.png" alt="Birthday Cake" class="cake" id="cake">
+                <img src="https://uploads.onecompiler.io/3zky9aw9p/43kjab4wq/%E2%80%94Pngtree%E2%80%94birthday%20cake%203d_16787458.png" alt="Birthday Cake" class="cake" id="cake">
                 <div class="balloons-container">
                     <div class="balloon" data-color="red"></div>
                     <div class="balloon" data-color="blue"></div>
